--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
    <body>
       <header>
          <div class="container-fluid">
-         <!--Navbar from Bootstrap and extra styling added-->
+            <!--Navbar from Bootstrap and extra styling added-->
             <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
@@ -58,30 +58,34 @@
          </div>
       </header>
       <section class="container-fluid">
-      <!--Story section with founders picture and company history-->
+         <!--Story section with founders picture and company history-->
          <div style="margin:60px 5px 5px;" class="row">
             <div class="col-12">
                <h1>Our Story</h1>
             </div>
          </div>
          <div class="row ourow">
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 ourstory">
                <img id="team-img" src="assets/img/team.jpg" class="img-fluid"  alt="owners picture, two ladies and a man.">
             </div>
-            <div id="ourstory" class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 ourstory">
                <p>
                   We opened in 2008 from an idea of David Spigaglia, who worked every year in very popular bars since he was 15 years old.<br>
-                  The start was focused on understanding what managing the different offers of our bar actually meant. <br>In a couple of years we became the benchmark for the Summer weekend nights in Bolsena,
+                  The start was focused on understanding what managing the different offers of our bar actually meant. 
+               </p>
+               <p>In a couple of years we became the benchmark for the Summer weekend nights in Bolsena,
                   we specialized ourselves on drinks and enjoyed hosting parties and music from local passionate dj's wich were playing in various important clubs at that time.
-                  After a three years period of this kind we moved our focus on another side of our job, lunch and aperitivo.<br>
-                  We introduced Salads and Sandwitches for lunch and expanded our offer in the evening with finger food and canape's of our choice.<br>
-                  2012 represents our turning point on understanding another aspect of our job, icecream. We discovered a whole new world that stimulates and keeps us busy till today.
+               </p>
+               <p>After a three years period of this kind we moved our focus on another side of our job, lunch and aperitivo.
+                  We introduced Salads and Sandwitches for lunch and expanded our offer in the evening with finger food and canape's of our choice.
+               </p>
+               <p>2012 represents our turning point on understanding another aspect of our job, icecream. We discovered a whole new world that stimulates and keeps us busy till today.
                </p>
             </div>
          </div>
       </section>
       <div class="container-fluid">
-      <!--Quotes section with real quotes from Google, translated to English-->
+         <!--Quotes section with real quotes from Google, translated to English-->
          <section class="quotes">
             <div class="row">
                <div class="col-12 my-4 ">
@@ -121,40 +125,29 @@
             </div>
          </section>
       </div>
-      <footer id="definitive">
-       <!-- Footer section with nav elements, addresses and Social Media links-->
+      <footer id="definitive" style="margin-top: 40px;">
+         <!-- Footer section with nav elements, addresses and Social Media links-->
          <div class="container-fluid">
-            <div class="row mt-3">
-               <div class="col-12">
-                  <h3 id="moreto" style="float:left;">More To Find Out</h3>
-               </div>
-            </div>
             <div class="row">
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                  <p>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <h5 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h5>
+                  <p style="padding-right:20px;">
                      <a class="order" href="index.html">Home</a>
                      <a class="order" href="aboutus.html">About Us</a>
                      <a class="order" href="menu.html">Menu&Delivery</a>
                      <a class="order" href="contacts.html">Contacts</a>
                   </p>
-                  <p class="footer-company-name">BarGelateriaOasi©2008</p>
                </div>
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
                   <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-                  <p class="space"><i class="fas fa-phone"></i> Phone: 338 52 44 261</p>
-                  <p class="space"><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+                  <p class="space"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
+                  <p class="space"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
                </div>
-            </div>
-         </div>
-         <div class="row text-center mt-3 pb-2">
-            <div class="col-4">
-               <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-facebook-square sochild" aria-hidden="true"></i> </a>   
-            </div>
-            <div class="col-4">
-               <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
-            </div>
-            <div class="col-4">
-               <a  href="contacts.html" target="_blank">  <i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" id="grid">
+                  <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
+                  <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
+                  <a  href="contacts.html" target="_blank"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               </div>
             </div>
          </div>
       </footer>
