--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <body>
       <header>
          <div class="container-fluid">
-         <!--Navbar from Bootstrap and extra styling added-->
+            <!--Navbar from Bootstrap and extra styling added-->
             <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
@@ -58,7 +58,7 @@
       </header>
       <!--Presentation section with product developing description-->
       <section>
-         <h2 id="pres-par">Take a Minute For Youself, With Us</h2>
+         <h2 class="pres-par">Take a Minute For Youself, With Us</h2>
          <p class="pres-chi">The green Bar Oasi is located on the main Summer walk of Bolsena, our guests love to enjoy an icecream while visiting the lake front.
             We focused first on the method to give the highest quality and most hot-resistant product possible. for an ice-cream. We obtained satisfying
             results according to us and our guests.
@@ -81,7 +81,7 @@
          <div class="container-fluid">
             <div class="row" style="margin: 70px 0 20px 0;">
                <div class="col-12 text-center" >
-                  <h2>What Makes Us Unique</h2>
+                  <h2 class="pres-par">What Makes Us Unique</h2>
                </div>
             </div>
             <div style="width:85%;" class="container-fluid">
@@ -92,7 +92,7 @@
                </div>
                <div class="row">
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
-                     <div style="margin-bottom:65px;" id="override">
+                     <div  id="override">
                         <h3 class="first-h">Quality <i class="fas fa-check-circle icon"></i></h3>
                         <p>The ingredients selection, like fresh local fruit, and our experience guarantee for the high quality of our icecream. </p>
                      </div>
@@ -109,7 +109,7 @@
                      <div>
                         <h3 class="first-h">Innovation <i class="fas fa-tachometer-alt icon"></i></h3>
                         <p>Our updated techniques serve alongside our classics, and play a central role in our 
-                            ambitious combinations distanciating our icecream from the Traditional Atmosphere.
+                           ambitious combinations distanciating our icecream from the Traditional Atmosphere.
                         </p>
                      </div>
                   </div>
@@ -124,41 +124,29 @@
             </div>
          </div>
       </section>
-     
-      <footer id="definitive">
-       <!-- Footer section with nav elements, addresses and Social Media links-->
+      <footer id="definitive" style="margin-top: 40px;">
+         <!-- Footer section with nav elements, addresses and Social Media links-->
          <div class="container-fluid">
-            <div class="row mt-3">
-               <div class="col-12">
-                  <h3 id="moreto" style="float:left;">More To Find Out</h3>
-               </div>
-            </div>
             <div class="row">
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                  <p>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <h5 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h5>
+                  <p style="padding-right:20px;">
                      <a class="order" href="index.html">Home</a>
                      <a class="order" href="aboutus.html">About Us</a>
                      <a class="order" href="menu.html">Menu&Delivery</a>
                      <a class="order" href="contacts.html">Contacts</a>
                   </p>
-                  <p class="footer-company-name">BarGelateriaOasi©2008</p>
                </div>
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
                   <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-                  <p class="space"><i class="fas fa-phone"></i> Phone: 338 52 44 261</p>
-                  <p class="space"><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+                  <p class="space"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
+                  <p class="space"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
                </div>
-            </div>
-         </div>
-         <div class="row text-center mt-3 pb-2">
-            <div class="col-4">
-               <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-facebook-square sochild" aria-hidden="true"></i> </a>   
-            </div>
-            <div class="col-4">
-               <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
-            </div>
-            <div class="col-4">
-               <a  href="contacts.html" target="_blank">  <i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" id="grid">
+                  <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
+                  <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
+                  <a  href="contacts.html" target="_blank"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               </div>
             </div>
          </div>
       </footer>
