--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
    <body>
       <header>
          <div class="container-fluid">
-         <!--Navbar from Bootstrap and extra styling added-->
+            <!--Navbar from Bootstrap and extra styling added-->
             <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
@@ -59,40 +59,42 @@
       </header>
       <!--Menu's divided per category, same color of the Logo-->
       <section style="margin-top:25px;" class="container-fluid">
-            <div class="row">
-               <div class="col-12 text-center">
-                  <h2 id="checkall">Check all our Menu's</h2>
-               </div>
-            </div>
-            <div class="row text-center">
-               <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12 ">
-                  <a class="menu1" id="food" href="assets/PDF/convert-jpg-to-pdf.net-Food.pdf" target="_blank" rel="">Panini's</a>
-               </div>
-               <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12">
-                  <a class="menu1" id="drink" href="assets/PDF/convert-jpg-to-pdf.net-Drink.pdf" target="_blank" rel=" noreferrer">Drinks</a>
-               </div>
-               <div class="col-lg-4 col-xl-4 col-md-12 col-sm-12">
-                  <a class="menu1" href="assets/PDF/smallpdf-ice.pdf" target="_blank" rel=" noreferrer">Icecream</a>
-               </div>
-            </div>
-            <!--different offers pictures, per occasion-->
          <div class="row">
-            <div class="col-12 text-center first-h">
-               <h2>Wishing for something different?</h2>
+            <div class="col-12 text-center">
+               <h2 class="pres-par" style="margin: 60px auto 30px auto">Check all our Menu's</h2>
             </div>
          </div>
          <div class="row text-center">
-            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 mt-10 ml-10">
-               <img class="differs" src="assets/img/crunchies1.jpg" alt="icecreams on sticks, with crunchy chocolate outside and soft icream inside">
-               <p class="monty">A bite of artisanal crunch</p>
+            <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12 ">
+               <a class="menu1" id="food" href="assets/PDF/convert-jpg-to-pdf.net-Food.pdf" target="_blank" rel="">Panini's</a>
             </div>
-            <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 mt-10 ml-10">
-               <img class="differs" src="assets/img/coppa-hey.jpg" alt="chocolate ice cream, with whipped cream in a glass cup">
-               <p class="monty">One of our glasscups, for you or to share</p>
+            <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12">
+               <a class="menu1" id="drink" href="assets/PDF/convert-jpg-to-pdf.net-Drink.pdf" target="_blank" rel=" noreferrer">Drinks</a>
             </div>
-            <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 mt-10 ml-10">
-               <img class="differs" src="assets/img/ice-cake.jpg" alt="strawberry icecream donut-shaped cake">
-               <p class="monty">Sunday with your family? Birthday? One of our cakes might be your choice</p>
+            <div class="col-lg-4 col-xl-4 col-md-12 col-sm-12">
+               <a class="menu1" href="assets/PDF/smallpdf-ice.pdf" target="_blank" rel=" noreferrer">Icecream</a>
+            </div>
+         </div>
+         <!--different offers pictures, per occasion-->
+         <div class="container-fluid" style="width: 85%;margin-top:25px;">
+            <div class="row">
+               <div class="col-12 text-center">
+                  <h2 class="pres-par" style="margin: 60px auto 30px auto">Wishing for something different?</h2>
+               </div>
+            </div>
+            <div class="row text-center">
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mt-10 ml-10">
+                  <img class="differs" src="assets/img/crunchies1.jpg" alt="icecreams on sticks, with crunchy chocolate outside and soft icream inside">
+                  <h6 class="monty">A bite of artisanal crunch</h6>
+               </div>
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mt-10 ml-10">
+                  <img class="differs" src="assets/img/coppa-hey.jpg" alt="chocolate ice cream, with whipped cream in a glass cup">
+                  <h5 class="monty">One of our glasscups, for you or to share</h5>
+               </div>
+               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mt-10 ml-10">
+                  <img class="differs" src="assets/img/ice-cake.jpg" alt="strawberry icecream donut-shaped cake">
+                  <h5 class="monty">Sunday with your family? Birthday? One of our cakes might be your choice</h5>
+               </div>
             </div>
          </div>
       </section>
@@ -100,54 +102,43 @@
       <section>
          <div class="container-fluid">
             <div class="row">
-               <div class="col-12 text-center">
-                  <h2>Our quality at your doorstep, here some delivery options!</h2>
+               <div class="col-12 text-center ">
+                  <h2 class="pres-par" style="margin: 60px auto 30px auto">Our quality at your doorstep, here some delivery options!</h2>
                </div>
             </div>
             <div class="row text-center">
-               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                  <img class="delyop" src="assets/img/delivery-menu1.jpg" alt="icream delivery menu">
+               <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
+                  <img id="ipadpro" class="delyop" src="assets/img/delivery-menu1.jpg" alt="icream delivery menu">
                </div>
-               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+               <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
                   <img class="delyop" src="assets/img/delivery-menu1.jpg" alt="icream delivery menu">
                </div>
             </div>
          </div>
       </section>
-      <footer id="definitive">
-       <!-- Footer section with nav elements, addresses and Social Media links-->
+      <footer id="definitive" style="margin-top: 40px;">
+         <!-- Footer section with nav elements, addresses and Social Media links-->
          <div class="container-fluid">
-            <div class="row mt-3">
-               <div class="col-12">
-                  <h3 id="moreto" style="float:left;">More To Find Out</h3>
-               </div>
-            </div>
             <div class="row">
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                  <p>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <h5 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h5>
+                  <p style="padding-right:20px;">
                      <a class="order" href="index.html">Home</a>
                      <a class="order" href="aboutus.html">About Us</a>
                      <a class="order" href="menu.html">Menu&Delivery</a>
                      <a class="order" href="contacts.html">Contacts</a>
                   </p>
-                  <p class="footer-company-name">BarGelateriaOasi©2008</p>
                </div>
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
                   <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-                  <p class="space"><i class="fas fa-phone"></i> Phone: 338 52 44 261</p>
-                  <p class="space"><i class="fas fa-envelope"></i> Email: <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+                  <p class="space"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
+                  <p class="space"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
                </div>
-            </div>
-         </div>
-         <div class="row text-center mt-3 pb-2">
-            <div class="col-4">
-               <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-facebook-square sochild" aria-hidden="true"></i> </a>   
-            </div>
-            <div class="col-4">
-               <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
-            </div>
-            <div class="col-4">
-               <a  href="contacts.html" target="_blank">  <i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" id="grid">
+                  <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
+                  <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
+                  <a  href="contacts.html" target="_blank"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               </div>
             </div>
          </div>
       </footer>
