--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div>
                         <h3 class="first-h">Innovation <i class="fas fa-tachometer-alt icon"></i></h3>
-                        <p>Our updated techniques serve alongside our classics, and play a central role in our 
+                        <p>Our updated techniques serve alongside our classics and play a central role in our 
                            ambitious combinations distanciating our icecream from the Traditional Atmosphere.
                         </p>
                      </div>
