--- a/menu.html
+++ b/menu.html
@@ -13,13 +13,14 @@
       <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
    </head>
    <body>
-      <header>
-         <div class="container-fluid">
-            <!--Navbar from Bootstrap and extra styling added-->
-            <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
+<header>
+
+      <div class="container-fluid">
+
+            <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
-                     data-target="#jesuiscollapse" aria-controls="" aria-expanded="false" aria-label="Toggle navigation">
+                     data-target="#jesuiscollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
                </div>
@@ -38,7 +39,7 @@
                <div id="jesuiscollapse" class="navbar-collapse justify-content-end collapse"  >
                   <ul class="navbar-nav">
                      <li class="navbar-item">
-                        <a href="index.html" class="nav-link ">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                      </li>
                      <li class="navbar-item">
                         <a href="aboutus.html" class="nav-link">About us</a>
@@ -52,11 +53,12 @@
                   </ul>
                </div>
             </nav>
-         </div>
-         <div>
-            <img id="takeaw" src="assets/img/oasi.jpg" class="img-fluid"  alt="Take-away icecream box, icecream display case in the back">
-         </div>
-      </header>
+   </div>
+            <div class="imgdiv">
+                <img id="takeaw" src="assets/img/oasi.jpg" class="img-fluid"  alt="Take away box, icecream flavours in the back">
+            </div>
+           
+</header>
       <!--Menu's divided per category, same color of the Logo-->
       <section style="margin-top:25px;" class="container-fluid">
          <div class="row">
