--- a/aboutus.html
+++ b/aboutus.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<!DOCTYPE html> 
+<html lang="en-us"> 
    <head>
       <title>Bar Gelateria Oasi</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
-      <script src="https://kit.fontawesome.com/7a907b57fb.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" 
@@ -13,13 +12,14 @@
       <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
    </head>
    <body>
-      <header>
-         <div class="container-fluid">
-            <!--Navbar from Bootstrap and extra styling added-->
-            <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
+ <header>
+
+      <div class="container-fluid">
+
+            <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
-                     data-target="#jesuiscollapse" aria-controls="" aria-expanded="false" aria-label="Toggle navigation">
+                     data-target="#jesuiscollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
                </div>
@@ -52,11 +52,12 @@
                   </ul>
                </div>
             </nav>
-         </div>
-         <div>
-            <img id="about" src="assets/img/assorted-flavor-ice-creams.jpg" class="img-fluid"  alt="Inside of the icecream display case">
-         </div>
-      </header>
+   </div>
+            <div class="imgdiv">
+                <img id="about" src="assets/img/assorted-flavor-ice-creams.jpg" class="img-fluid"  alt="Icecream showcase from the inside">
+            </div>
+           
+</header>
       <section class="container-fluid">
          <!--Story section with founders picture and company history-->
          <div style="margin:60px 5px 5px;" class="row">
@@ -96,7 +97,7 @@
                <div class="col-12 col-md-6">
                   <div>
                      <div >
-                        <img src="assets/img/man-by-TimSavage.jpg" class="rounded-circle mr-3" height=150 width=200>
+                        <img src="assets/img/man-by-TimSavage.jpg" alt="close picture of a smiling man " class="rounded-circle mr-3" height=150 width=200>
                      </div>
                      <div>
                         <blockquote>
@@ -112,7 +113,7 @@
                <div class="col-12 col-md-6">
                   <div >
                      <div>
-                        <img src="assets/img/woman-by-AndreaPiacquadio.jpg" class="rounded-circle mb-3" height=150 width=200>
+                        <img src="assets/img/woman-by-AndreaPiacquadio.jpg" alt="close picture of a smiling woman " class="rounded-circle mb-3" height=150 width=200>
                      </div>
                      <div>
                         <blockquote>
