--- a/contacts.html
+++ b/contacts.html
@@ -16,10 +16,10 @@
       <header>
          <div class="container-fluid">
             <!--Navbar from Bootstrap and extra styling added-->
-            <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
+            <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
-                     data-target="#jesuiscollapse" aria-controls="" aria-expanded="false" aria-label="Toggle navigation">
+                     data-target="#jesuiscollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
                </div>
@@ -106,7 +106,7 @@
                </div>
             </div>
          </div>
-         <div class="container-fluid" style="marginu0 auto;">
+         <div class="container-fluid" style="margin:0 auto;">
             <div class="row">
                <div class="col-12">
                   <h3 style="float:left;">How can i reach you?</h3>
