--- a/events.html
+++ b/events.html
@@ -18,11 +18,11 @@
 
       <div class="container-fluid">
 
-        <nav class="navbar navbar-expand-md fixed-top navbar-light" role="navigation">
+        <nav class="navbar navbar-expand-md fixed-top navbar-light" >
 
             <div class="col-2 d-md-none menu-toggle mt-2">
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
-                data-target="#jesuiscollapse" aria-controls="" aria-expanded="false" aria-label="Toggle navigation">
+                data-target="#jesuiscollapse"  aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
