--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <header>
          <div class="container-fluid">
             <!--Navbar from Bootstrap and extra styling added-->
-            <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent" role="navigation">
+            <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
-                     data-target="#jesuiscollapse" aria-controls="" aria-expanded="false" aria-label="Toggle navigation">
+                     data-target="#jesuiscollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
                </div>
@@ -150,7 +150,7 @@
             </div>
          </div>
       </footer>
-      <!------------------------------------------------js scripts------------->
+      <!--js scripts-->
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
          integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
