reduced footer size, slimmed down its layout

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html lang="en-us"> 
+<html lang="en-us">
    <head>
       <title>Bar Gelateria Oasi</title>
       <meta charset="utf-8">
@@ -12,10 +12,8 @@
       <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
    </head>
    <body>
- <header>
-
-      <div class="container-fluid">
-
+      <header>
+         <div class="container-fluid">
             <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
@@ -52,12 +50,11 @@
                   </ul>
                </div>
             </nav>
-   </div>
-            <div class="imgdiv">
-                <img id="about" src="assets/img/assorted-flavor-ice-creams.jpg" class="img-fluid"  alt="Icecream showcase from the inside">
-            </div>
-           
-</header>
+         </div>
+         <div class="imgdiv">
+            <img id="about" src="assets/img/assorted-flavor-ice-creams.jpg" class="img-fluid"  alt="Icecream showcase from the inside">
+         </div>
+      </header>
       <section class="container-fluid">
          <!--Story section with founders picture and company history-->
          <div style="margin:60px 5px 5px;" class="row">
@@ -87,7 +84,7 @@
       </section>
       <div class="container-fluid">
          <!--Quotes section with real quotes from Google, translated to English-->
-         <section class="quotes">
+         <section class="quotes pc">
             <div class="row">
                <div class="col-12 my-4 ">
                   <h2>Quotes:</h2>
@@ -131,23 +128,27 @@
          <div class="container-fluid">
             <div class="row">
                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
-                  <h5 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h5>
-                  <p style="padding-right:20px;">
-                     <a class="order" href="index.html">Home</a>
-                     <a class="order" href="aboutus.html">About Us</a>
-                     <a class="order" href="menu.html">Menu&Delivery</a>
-                     <a class="order" href="contacts.html">Contacts</a>
-                  </p>
+                  <p class="spice"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
-                  <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-                  <p class="space"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
-                  <p class="space"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+                  <p class="spice"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
                </div>
-               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" id="grid">
-                  <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
-                  <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
-                  <a  href="contacts.html" target="_blank"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <p class="spice"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+               </div>
+            </div>
+            <div class="row">
+            </div>
+            <div class="row">
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 grid">
+                  <div>
+                     <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
+                     <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
+                     <a  href="contacts.html"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+                  </div>
+               </div>
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <h6 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h6>
                </div>
             </div>
          </div>
