--- a/contacts.html
+++ b/contacts.html
@@ -109,7 +109,7 @@
          <div class="container-fluid" style="margin:0 auto;">
             <div class="row">
                <div class="col-12">
-                  <h3 style="float:left;">How can i reach you?</h3>
+                  <h3 style="float:left;">How can I reach you?</h3>
                </div>
             </div>
          </div>
@@ -149,23 +149,27 @@
          <div class="container-fluid">
             <div class="row">
                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
-                  <h5 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h5>
-                  <p style="padding-right:20px;">
-                     <a class="order" href="index.html">Home</a>
-                     <a class="order" href="aboutus.html">About Us</a>
-                     <a class="order" href="menu.html">Menu&Delivery</a>
-                     <a class="order" href="contacts.html">Contacts</a>
-                  </p>
+                  <p class="spice"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
-                  <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-                  <p class="space"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
-                  <p class="space"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+                  <p class="spice"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
                </div>
-               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" id="grid">
-                  <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
-                  <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
-                  <a  href="contacts.html" target="_blank"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <p class="spice"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+               </div>
+            </div>
+            <div class="row">
+            </div>
+            <div class="row">
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 grid">
+                  <div>
+                     <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
+                     <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
+                     <a  href="contacts.html"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+                  </div>
+               </div>
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <h6 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h6>
                </div>
             </div>
          </div>
