--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section>
          <h2 class="pres-par">Take a Minute For Youself, With Us</h2>
          <p class="pres-chi">The green Bar Oasi is located on the main Summer walk of Bolsena, our guests love to enjoy an icecream while visiting the lake front.
-            We focused first on the method to give the highest quality and most hot-resistant product possible. for an ice-cream. We obtained satisfying
+            We focused first on the method to give the highest quality and most hot-resistant product possible, for an ice-cream. We obtained satisfying
             results according to us and our guests.
          </p>
          <p class="pres-chi">Since our opening in 2008, we searched for new ways to evolve our iceream culture and after attending different national events, 
@@ -84,7 +84,7 @@
                   <h2 class="pres-par">What Makes Us Unique</h2>
                </div>
             </div>
-            <div style="width:85%;" class="container-fluid">
+            <div  class="container-fluid pc">
                <div class="row">
                   <div class="col-12 text-center">
                      <img id="so-fresh" src="assets/img/quality-eh.jpg" alt="fresh fruit out of an icecream cone">
@@ -104,12 +104,12 @@
                      </div>
                   </div>
                </div>
-               <div class="row">
+               <div class="row ">
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div>
                         <h3 class="first-h">Innovation <i class="fas fa-tachometer-alt icon"></i></h3>
                         <p>Our updated techniques serve alongside our classics and play a central role in our 
-                           ambitious combinations distanciating our icecream from the Traditional Atmosphere.
+                           ambitious combinations, distanciating our icecream from the Traditional Atmosphere.
                         </p>
                      </div>
                   </div>
@@ -129,23 +129,27 @@
          <div class="container-fluid">
             <div class="row">
                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
-                  <h5 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h5>
-                  <p style="padding-right:20px;">
-                     <a class="order" href="index.html">Home</a>
-                     <a class="order" href="aboutus.html">About Us</a>
-                     <a class="order" href="menu.html">Menu&Delivery</a>
-                     <a class="order" href="contacts.html">Contacts</a>
-                  </p>
+                  <p class="spice"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
-                  <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-                  <p class="space"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
-                  <p class="space"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+                  <p class="spice"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
                </div>
-               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" id="grid">
-                  <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
-                  <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
-                  <a  href="contacts.html" target="_blank"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <p class="spice"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+               </div>
+            </div>
+            <div class="row">
+            </div>
+            <div class="row">
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 grid">
+                  <div>
+                     <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
+                     <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
+                     <a  href="contacts.html"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+                  </div>
+               </div>
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <h6 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h6>
                </div>
             </div>
          </div>
