--- a/menu.html
+++ b/menu.html
@@ -13,10 +13,8 @@
       <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
    </head>
    <body>
-<header>
-
-      <div class="container-fluid">
-
+      <header>
+         <div class="container-fluid">
             <nav id="mynav" class="navbar navbar-expand-md fixed-top navbar-light nav-colored nav-transparent">
                <div class="col-2 d-md-none menu-toggle mt-2">
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
@@ -53,12 +51,11 @@
                   </ul>
                </div>
             </nav>
-   </div>
-            <div class="imgdiv">
-                <img id="takeaw" src="assets/img/oasi.jpg" class="img-fluid"  alt="Take away box, icecream flavours in the back">
-            </div>
-           
-</header>
+         </div>
+         <div class="imgdiv">
+            <img id="takeaw" src="assets/img/oasi.jpg" class="img-fluid"  alt="Take away box, icecream flavours in the back">
+         </div>
+      </header>
       <!--Menu's divided per category, same color of the Logo-->
       <section style="margin-top:25px;" class="container-fluid">
          <div class="row">
@@ -87,7 +84,7 @@
             <div class="row text-center">
                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mt-10 ml-10">
                   <img class="differs" src="assets/img/crunchies1.jpg" alt="icecreams on sticks, with crunchy chocolate outside and soft icream inside">
-                  <h6 class="monty">A bite of artisanal crunch</h6>
+                  <h5 class="monty">A bite of artisanal crunch</h5>
                </div>
                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 mt-10 ml-10">
                   <img class="differs" src="assets/img/coppa-hey.jpg" alt="chocolate ice cream, with whipped cream in a glass cup">
@@ -123,23 +120,27 @@
          <div class="container-fluid">
             <div class="row">
                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
-                  <h5 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h5>
-                  <p style="padding-right:20px;">
-                     <a class="order" href="index.html">Home</a>
-                     <a class="order" href="aboutus.html">About Us</a>
-                     <a class="order" href="menu.html">Menu&Delivery</a>
-                     <a class="order" href="contacts.html">Contacts</a>
-                  </p>
+                  <p class="spice"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
-                  <p class="space"><i class="fas fa-map-marker-alt"></i> Viale Cadorna 9, Bolsena. Italy</p>
-                  <p class="space"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
-                  <p class="space"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+                  <p class="spice"><i class="fas fa-phone"></i> Phone: +39 338 52 44 261</p>
                </div>
-               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" id="grid">
-                  <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
-                  <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
-                  <a  href="contacts.html" target="_blank"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <p class="spice"><i class="fas fa-envelope"></i> <a href="mailto:baroasi@hotmail.it">baroasi@hotmail.it</a></p>
+               </div>
+            </div>
+            <div class="row">
+            </div>
+            <div class="row">
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 grid">
+                  <div>
+                     <a  href="https://www.facebook.com/bargelateriaoasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-square sochild" aria-hidden="true"></i></a>
+                     <a href="https://www.instagram.com/bar_gelateria_oasi" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram-square sochild" aria-hidden="true"></i></a>
+                     <a  href="contacts.html"><i class="fab fa-whatsapp-square sochild" aria-hidden="true"></i></a>
+                  </div>
+               </div>
+               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="margin-top:15px;">
+                  <h6 class="footer-company-name"><strong>BarGelateriaOasi©2008</strong></h6>
                </div>
             </div>
          </div>
