Consistent design improved in Homepage

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div  id="override">
                         <h3 class="first-h">Quality <i class="fas fa-check-circle icon"></i></h3>
-                        <p>The ingredients selection, like fresh local fruit, and our experience guarantee for the high quality of our icecream. </p>
+                        <p class="pc">The ingredients selection, like fresh local fruit, and our experience guarantee for the high quality of our icecream. </p>
                      </div>
                   </div>
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div >
                         <h3 class="first-h">Creativity <i class="fas fa-fire-alt icon"></i></h3>
-                        <p>Everyday searching for new ways to enrich our assortment and our flavours.</p>
+                        <p class="pc">Everyday searching for new ways to enrich our assortment and our flavours.</p>
                      </div>
                   </div>
                </div>
@@ -108,7 +108,7 @@
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div>
                         <h3 class="first-h">Innovation <i class="fas fa-tachometer-alt icon"></i></h3>
-                        <p>Our updated techniques serve alongside our classics and play a central role in our 
+                        <p class="pc">Our updated techniques serve alongside our classics and play a central role in our 
                            ambitious combinations, distanciating our icecream from the Traditional Atmosphere.
                         </p>
                      </div>
@@ -116,7 +116,7 @@
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div>
                         <h3 class="first-h">With You <i class="fas fa-globe icon"></i></h3>
-                        <p>Willing to take care of your needs, bystanders, flexible, Connected. 
+                        <p class="pc">Willing to take care of your needs, bystanders, flexible, Connected. 
                         </p>
                      </div>
                   </div>
