Hero-images heights adjusted for mobile screens

--- a/aboutus.html
+++ b/aboutus.html
@@ -63,7 +63,7 @@
             </div>
          </div>
          <div class="row ourow">
-            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 ourstory">
+            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
                <img id="team-img" src="assets/img/team.jpg" class="img-fluid"  alt="owners picture, two ladies and a man.">
             </div>
             <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 ourstory">
@@ -72,7 +72,7 @@
                   The start was focused on understanding what managing the different offers of our bar actually meant. 
                </p>
                <p>In a couple of years we became the benchmark for the Summer weekend nights in Bolsena,
-                  we specialized ourselves on drinks and enjoyed hosting parties and music from local passionate dj's wich were playing in various important clubs at that time.
+                  we specialized ourselves on drinks and enjoyed hosting parties and music from local passionate dj's which were playing in various important clubs at that time.
                </p>
                <p>After a three years period of this kind we moved our focus on another side of our job, lunch and aperitivo.
                   We introduced Salads and Sandwitches for lunch and expanded our offer in the evening with finger food and canape's of our choice.
