--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </header>
       <!--Presentation section with product developing description-->
       <section>
-         <h2 class="pres-par">Take a Minute For Youself, With Us</h2>
+         <h2 class="pres-par">Take a Minute For Yourself, With Us</h2>
          <p class="pres-chi">The green Bar Oasi is located on the main Summer walk of Bolsena, our guests love to enjoy an icecream while visiting the lake front.
             We focused first on the method to give the highest quality and most hot-resistant product possible, for an ice-cream. We obtained satisfying
             results according to us and our guests.
@@ -66,7 +66,7 @@
          <p class="pres-chi">Since our opening in 2008, we searched for new ways to evolve our iceream culture and after attending different national events, 
             in 2012 we found our first teacher, Donata Panciera,
             globally known for her expertise, and respectful way to choose and treat ingredients. 
-            That experience changed exponencially the way we think of a new icecream flavour.
+            That experience radically changed the way we think of a new icecream flavour.
          </p>
          <p class="pres-chi">In 2015 we were ready to renew our working style and we found a perfect match in Sergio Colalucci, an italian champion of icecream making.
             With him we gave a more modern touch to our process, we restyled the serving of our glass-cups, 
@@ -116,7 +116,7 @@
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 text-center">
                      <div>
                         <h3 class="first-h">With You <i class="fas fa-globe icon"></i></h3>
-                        <p class="pc">Willing to take care of your needs, bystanders, flexible, Connected. 
+                        <p class="pc">Willing to take care of your needs, bystanders, flexible, connected. 
                         </p>
                      </div>
                   </div>
